# llm_template

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh  test.sh
.github/workflows/: ci.yml  format.yml  lint.yml  test.yml  type-check.yml
