[project]
name = "template"
version = "0.1.0"
description = "Template project"
authors = [
    {name = "Ole Jorgensen", email = "ojorgensen1417@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "torch>=2.3.0",
    "transformers>=4.41.1",
    "datasets>=2.19.1",
    "accelerate>=0.30.1",
    "debugpy>=1.8.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.1",
    "openai>=1.30.3",
    "anthropic>=0.26.1",
    "mistral>=18.0.1",
    "wandb>=0.16.0,<0.17.0",
    "ipython>=8.24.0",
    "ipykernel>=6.29.4",
    "notebook>=7.2.0",
    "inspect-ai",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.9.0",
    "pre-commit>=3.6.2",
    "pytest>=8.1.1",
    "ruff>=0.3.5",
]

[tool.ruff]
extend-exclude = ["docs"]
src = ["src"]

[tool.ruff.lint]
select = ["E",   # pycodestyle errors
          "W",   # pycodestyle warnings
          "F",   # flake8
          "D",   # pydocstyle
          "I",   # isort
          # "RET", # flake8-return
          # "RUF", # ruff rules
        ]
ignore = ["E203", "E501", "D10", "D212", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
warn_unused_ignores = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
#Get mypy to resolve imports correctly in the test files
mypy_path = "tests"

[[tool.mypy.overrides]]
module = "pandas-stubs.*"
ignore_errors = true

[tool.uv.sources]
inspect-ai = { git = "https://github.com/UKGovernmentBEIS/inspect_ai" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
